Stack cookie buttons vertically on mobile (now correctly)

--- a/assets/scss/mobile.scss
+++ b/assets/scss/mobile.scss
@@ -345,9 +345,12 @@
     .buttons-container-desktop {
       display: none;
     }
-    .cookie-consent-container {
+    .cookie-buttons {
       flex-direction: column;
       align-items: stretch;
+    }
+    .cookie-buttons button {
+      width: 100%;
     }
   }
 
